--- a/ensayo.html
+++ b/ensayo.html
@@ -9,5 +9,6 @@
     <h1>Ensayo con GIT</h1>
     <h2>Ensayooo</h2>
     <div class="estilos1"><p>Esto es un ensayo</p></div>
+    <h3>Ensayo 3</h3>
 </body>
 </html>
