--- a/ensayo.html
+++ b/ensayo.html
@@ -10,5 +10,6 @@
     <h2>Ensayooo</h2>
     <div class="estilos1"><p>Esto es un ensayo</p></div>
     <h3>Ensayo 3</h3>
+    <h4>Ensayo 4</h4>
 </body>
 </html>
