--- a/ensayo.html
+++ b/ensayo.html
@@ -11,5 +11,6 @@
     <div class="estilos1"><p>Esto es un ensayo</p></div>
     <h3>Ensayo 3</h3>
     <h4>Ensayo 4</h4>
+    <h1>Esta es</h1>
 </body>
 </html>
