En este cambio se añadió una sección p sin estilo con un texto contenido aleatoriamente

--- a/ensayo.html
+++ b/ensayo.html
@@ -12,5 +12,7 @@
     <h3>Ensayo 3</h3>
     <h4>Ensayo 4</h4>
     <h1>Esta es</h1>
+    <h4>Para git se fue</h4>
+    <p> fsdfdsif</p>
 </body>
 </html>
